--- a/package.json
+++ b/package.json
@@ -1,19 +1,15 @@
 {
   "name": "zeit-automation",
   "version": "1.0.0",
-  "description": "Automation for ZEIT time tracking system",
+  "private": true,
+  "description": "ZEIT automation via Playwright + GitHub Actions",
   "main": "scripts/run.js",
   "scripts": {
-    "start": "node scripts/run.js"
+    "run": "node scripts/run.js",
+    "toggle": "ACTION=toggle node scripts/run.js",
+    "break": "ACTION=break node scripts/run.js"
   },
-  "keywords": [
-    "zeit",
-    "automation",
-    "playwright"
-  ],
-  "author": "",
-  "license": "MIT",
   "dependencies": {
-    "playwright": "^1.55.1"
+    "playwright": "^1.50.0"
   }
 }
