--- a/.github/workflows/zeit.yml
+++ b/.github/workflows/zeit.yml
@@ -28,7 +28,7 @@ jobs:
           node-version: "18"
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install Playwright (Chromium + OS deps)
         run: npx playwright install --with-deps chromium
